--- a/02_scripts/05_Analysen.Rmd
+++ b/02_scripts/05_Analysen.Rmd
@@ -8,22 +8,136 @@ date: "2024-08-30"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+# lineare gemischte Modelle 
+```{r, echo=FALSE}
+#install.packages("pbkrtest")
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+library(lme4)
+library(emmeans)
+library(Matrix)
 
-```{r cars}
-summary(cars)
+interceptonlymodel <- lmer(formula = d ~ 1 + (1|Study), weights = groupsize, data = results3)
+
+summary(interceptonlymodel)
+emmeans(interceptonlymodel, ~1)
+
+
 ```
 
-## Including Plots
+## Hinzufügen eines Level-1 Prädiktors
+Wir wollen natürlich herausfinden, woran es liegen könnte, dass die Studien unterschiedliche Differenzen haben.
 
-You can also embed plots, for example:
+Hypothese 1: Die Differenz hängt mit der Fragebogenkombination zusammen.
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+
+```{r }
+results3$questionnaire_pair = paste(results3$measure_1, results3$measure_2)
+results3$questionnaire_pair = factor(paste(results3$measure_1, results3$measure_2))
+
+questionnairemodel <- lmer(formula = d ~ -1 + questionnaire_pair + (1|Study), weights = groupsize, data = results3)
+summary(questionnairemodel)
+emmeans(questionnairemodel, specs = "questionnaire_pair")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+# ANOVA
+
+H0 wird abgelehnt -> es gibt signifikante Unterschiede zwischne den Differenzen der Fragebögen
+```{r }
+
+anova_result <- aov(d ~ questionnaire_pair, data = results3)
+summary(anova_result)
+
+anova(questionnairemodel, interceptonlymodel)
+
+```
+
+
+## mean of (absolute) d 
+```{r, echo=FALSE}
+
+d_absolute <- abs(results3$d)
+d_absolute_mean <- mean(d_absolute)
+summary(d_absolute)
+sd(d_absolute)
+
+#mean of d
+d <- results3$d
+d_mean <- mean(d)
+summary(d)
+sd(d)
+```
+
+# linear mixed model estimates
+
+Wir möchten die Differenz i in Gruppe j aufteilen in Anteile, die auf Unterschiede der jeweiligen Fragebogenkombination j zurückgehen und Unterschiede die auch innerhalb der Fragebogenkombination noch zwischen einzelnen Studien i bestehen. 
+
+Es ist ein Mixed model weil wir von festen und von random effects (pro Studie unterscheiden sich die Differenzen) ausgehen. 
+
+
+```{r, echo=FALSE}
+library(lme4)
+library(sjPlot)
+
+interceptonlymodel <- lmer(formula = d ~ 1 + (1|Study),
+                           weights = groupsize,
+                           data = results3)
+
+summary(interceptonlymodel)
+
+
+```
+
+## Hinzufügen eines Level-1 Prädiktors
+Wir wollen herausfinden, woran es liegen könnte, dass die Studien unterschiedliche Differenzen haben.
+
+Hypothese 1: Die Differenz hängt mit der Fragebogenkombination zusammen.
+
+
+```{r, echo=FALSE}
+
+# install.packages("knitr")
+# install.packages("kableExtra")
+# install.packages("lme4")
+
+library(knitr)
+library(kableExtra)
+library(lme4)
+
+
+results3$questionnaire_pair = paste(results3$measure_1, results3$measure_2)
+results3$questionnaire_pair = factor(paste(results3$measure_1, results3$measure_2))
+
+interceptonlymodel <- lmer(formula = d ~ 1 + questionnaire_pair + (1|Study), weights = groupsize, data = results3)
+summary(interceptonlymodel)
+lmerTest::ls_means(interceptonlymodel, which = "questionnaire_pair")
+
+```
+
+# ANOVA
+
+H0 wird abgelehnt -> es gibt signifikante Unterschiede zwischne den Differenzen der Fragebögen
+```{r, echo=FALSE}
+
+anova_result <- aov(d ~ questionnaire_pair, data = results3)
+summary(anova_result)
+
+```
+
+# save table 2
+```{r, echo=FALSE}
+
+lmme <- data
+lmme$p.value <- ifelse(lmme$p.value < 0.001, "p < 0.001", paste("p =", lmme$p.value))
+lmme$Estimate <- round(lmme$Estimate, 2)
+lmme$Std.Error <- round(lmme$Std.Error, 2)
+lmme$lower <- round(lmme$lower, 2)
+lmme$upper <- round(lmme$upper, 2)
+
+
+#install.packages("writexl")
+library(writexl)
+file_path <- "../04_results/lmme.xlsx"
+write.xlsx(lmme, file_path, rowNames = FALSE)
+
+```
