--- a/02_scripts/04_Plots_clean.Rmd
+++ b/02_scripts/04_Plots_clean.Rmd
@@ -104,6 +104,8 @@ Scatterplot<- ggplot(results3, aes(x = value_1, y = value_2)) +
 Scatterplot
 
 ggsave("Scatterplot.png", plot = Scatterplot, width = 10, height = 8, dpi = 300)
+
+
 ```
 
 # Mean und limits of Agreement
@@ -155,29 +157,45 @@ Unweighted +
 ggsave("Unweighted.png", plot = Unweighted, width = 10, height = 8, dpi = 300)
 
 
-# Weighted plot
+library(ggplot2)
+
 Weighted <- ggplot(results3, aes(x = m, y = d, color = d)) + 
   geom_point() + 
   facet_grid(measure_1 ~ measure_2) + 
   geom_hline(data = results4, aes(yintercept = wgt_mean)) + 
-  geom_hline(data = results4, aes(yintercept = wtd_lo), linetype = 2) +
-  geom_hline(data = results4, aes(yintercept = wtd_hi), linetype = 2) +
-  geom_text(data = results4, aes(x = 30, y = wgt_mean, label = sprintf("%.1f", wgt_mean)), vjust = -0.2, color = "black") +
-  geom_text(data = results4, aes(x = 30, y = wtd_lo, label = sprintf("%.1f", wtd_lo)), vjust = -0.2, color = "black") +
-  geom_text(data = results4, aes(x = 30, y = wtd_hi, label = sprintf("%.1f", wtd_hi)), vjust = -0.2, color = "black") +
+  geom_hline(data = results4, aes(yintercept = wtd_lo), linetype = 2, alpha = 0.5) +
+  geom_hline(data = results4, aes(yintercept = wtd_hi), linetype = 2, alpha = 0.5) +
+    geom_text(data = results4, 
+            aes(x = 20, y = wtd_lo, label = sprintf("%.1f", wtd_lo)), 
+            vjust = 0.8, color = "black") +  
+  geom_text(data = results4, 
+            aes(x = 20, y = wtd_hi, label = sprintf("%.1f", wtd_hi)), 
+            vjust = -1.2, color = "black") + 
+  
+  geom_text(data = results4, 
+            aes(x = 75, y = wgt_mean, label = sprintf("%.1f", wgt_mean)), 
+            vjust = -0.4, color = "black") +
+  
   coord_cartesian(xlim = c(20, 80)) +
-  labs(title = "Weighted Mean and Limits of Agreement") + 
+  labs(title = "Means and Limits of Agreement", 
+       x = "Measurement (m)", 
+       y = "Difference (d)",   
+       subtitle = "Weighted by groupsize") + 
   scale_color_viridis_c(option = "D") + 
   theme_minimal() +
   theme(
-    plot.title = element_text(size = 20, face = "bold"),     # Title font size
-    plot.subtitle = element_text(size = 20),                 # Subtitle font size
-    axis.title.x = element_text(size = 16),                  # X-axis title font size
-    axis.title.y = element_text(size = 16),                  # Y-axis title font size
-    axis.text.x = element_text(size = 14),                   # X-axis text font size
-    axis.text.y = element_text(size = 14),                   # Y-axis text font size
-    plot.caption = element_text(size = 12)                   # Caption font size
+    plot.title = element_text(size = 20, face = "bold"), 
+    plot.subtitle = element_text(size = 20),        
+    axis.title.x = element_text(size = 16),               
+    axis.title.y = element_text(size = 16),               
+    axis.text.x = element_text(size = 14),                  
+    axis.text.y = element_text(size = 14),                   
+    plot.caption = element_text(size = 12)                  
   )
+
+
+
+
 Weighted
 
 ggsave("Weighted.png", plot = Weighted, width = 10, height = 8, dpi = 300)
